Brenda-se agrego categorias

--- a/template/play/jugar.html
+++ b/template/play/jugar.html
@@ -27,6 +27,9 @@
 <!--Sentencia de else que chequea la respuesta introducida -->
 {% else %}
 <div class="container">
+    <h2>
+        {{pregunta.categoria}}
+    </h2>
     <h3>
         {{pregunta.texto}}
     </h3>
