--- a/static/css/styleInicio.css
+++ b/static/css/styleInicio.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
 body{
 	background-color: rgb(15, 104, 7);
 	font-family: 'Oswald', sans-serif;
