--- a/static/css/styleNiveles.css
+++ b/static/css/styleNiveles.css
@@ -5,13 +5,13 @@ body, html {
     font-size: 100%; 	
     padding: 0; 
     margin: 0; 
-    background: rosybrown;
+    background: #FDC049;
 }
 
 /* Titulo */
 .main > section h2 {
-	font-weight: 300;
-	color: #ccc;
+	font-weight: 1000;
+	color: #000;
 }
 
 /* Ancho de los botones*/
@@ -24,8 +24,8 @@ body, html {
 /* propiedades de los botones */
 .main > section button {
 	border: none;
-	background: #47a3da;
-	color: #fff;
+	background: #94C9E9;
+	color: #000;
 	padding: 1.5em;
 	display: block;
 	width: 100%;
@@ -36,7 +36,7 @@ body, html {
 
 /* Efectos de los botones */
 .main > section button:hover {
-	background: #258ecd;
+	background: #0d77b6;
 }
 
 .main > section button.active {
@@ -44,6 +44,6 @@ body, html {
 }
 
 .main > section button.disabled {
-	background: #aaa;
+	background: #0d77b6;
 	pointer-events: none;
 }
