--- a/template/play/niveles.html
+++ b/template/play/niveles.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
-    <link rel="stylesheet" href="{% static 'css/styleHome.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleNiveles.css' %}">
 </head>
 <body>
     <h1>
-        Bienvenida {{user}}
+        Hola {{user}} !!!
     </h1>
     <div class="main">
         <section>
