--- a/template/play/tablero.html
+++ b/template/play/tablero.html
@@ -33,6 +33,25 @@
             {% endfor %}
         </tbody>
     </table>
+        <!-- compartir-->
+    <a title="Compartir en Facebook" id="facebook-share-button-linuxito.com">Compartir en Facebook</a>
+        <script>
+        var facebookShareButton = document.getElementById('facebook-share-button-linuxito.com');
+        var facebookShareButtonHref='http://www.facebook.com/sharer/sharer.php?';
+        facebookShareButtonHref += 'u='+document.URL;
+        facebookShareButtonHref += '&title='+document.title;
+        facebookShareButton.href = facebookShareButtonHref;
+        </script>
+    <a title="Twittear" id="twitter-share-button-linuxito.com">Twittear</a>
+        <script>
+        var twitterShareButton = document.getElementById('twitter-share-button-linuxito.com');
+        var twitterShareButtonHref='https://twitter.com/share?';
+        twitterShareButtonHref += 'url='+document.URL;
+        twitterShareButtonHref += '&via=linuxitux';
+        twitterShareButtonHref += '&text='+document.title;
+        twitterShareButton.href = twitterShareButtonHref;
+    </script>
+    <!-- compartir-->
 
 </div>
 {% endblock %}
