--- a/template/play/jugar.html
+++ b/template/play/jugar.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego</title>
-    <!-- <link rel="stylesheet" href="{% static 'css/styleJugar.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/styleJugar.css' %}">
 </head>
 <body>
     
@@ -14,39 +14,39 @@
 
 {% if pregunta is None %}
 
-<div class="container">
-    <div class="jumbotron my-4">
-        <h1>Finalizaste el Juego!!. Mira el tablero de posiciones</h1>
-        <a href="{% url 'tablero' %}">
-            <button class="btn-success">
-                Ver Aqui el Tablero
-            </button>
-        </a>
-    </div>
+<div id="wrapper">
+    <h1>Finalizaste el Juego!! Tu puntaje es {{puntajeTotal}}</h1>
+    <a href="{% url 'tablero' %}">
+        <button id="start" class="btn-success">
+            Ver Aqui el Tablero
+        </button>
+    </a>
 </div>
 <!--Sentencia de else que chequea la respuesta introducida -->
 {% else %}
-<div class="container">
-    <h2>
+<div id="wrapper">
+    <h1>
         {{pregunta.categoria}}
-    </h2>
-    <h3>
+    </h1>
+    <h2>
         {{pregunta.texto}}
-    </h3>
+    </h2>
         <form method="POST" class="form">
             {% csrf_token %}
             <div class="quiz-container" id="quiz">
                 <input type="hidden" name="pregunta_pk" value="{{pregunta.pk}}">
 
             {% for opciones in pregunta.opciones.all %}
+            <h3>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="respuesta_pk" value="{{opciones.pk}}" id="choice-{{forloop.counter}}">
                 <label class="form-check-label" for="choice-{{forloop.counter}}">
                     {{opciones.texto}}
                 </label>
             </div>
+            </h3>
             {% endfor %}
-            <button type="submit" class="btn btn-success">
+            <button id="start" type="submit" class="btn btn-success">
                 Enviar
             </button>
         </form>
