--- a/template/play/tablero.html
+++ b/template/play/tablero.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
+<!-- {% load static %} -->
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tablero</title>
+    <link rel="stylesheet" href="{% static 'css/styleTablero.css' %}">
 </head>
 <body>
-{% block contenido %}
-<div class="container">
-    <h1 class="text-center my-4">
-        <span class="badge badge-info">
+    <h1>
+        <span class="info">
             Los {{contar_user}} mejores jugadores
         </span>
     </h1>
-
-    <table class="table table-striped table-bodered">
+{% block contenido %}
+<div id="main-container">
+    <table>
         <thead>
             <tr>
                 <th>Posicion</th>
@@ -33,7 +34,7 @@
             {% endfor %}
         </tbody>
     </table>
-
+    <img src="{% static 'css/Carpi3.jpg' %}" width="340" height="200"/>
 </div>
 {% endblock %}
 </body>
