--- a/static/css/styleNiveles.css
+++ b/static/css/styleNiveles.css
@@ -1,10 +1,52 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+*{
+	margin:0;
+    margin-top:0;
+}
+.menu{  
+    background-color: #906c54;
+    overflow: hidden;  
+    padding: 0px;
+    position: sticky;
+}
+.menu a{
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 20px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    box-sizing: border-box;
+    font-weight:1000;
+}  
+.menu a:hover{
+    background-color:#fffeff;
+    color: #906c54;
+	cursor: pointer;
+}
+.menu a.active{
+    float: left;
+    background-color: #fffeff;
+    color: #ad6648;
+    padding: 20px 50px;
+    position: relative;
+    left: 15px;
+    font-weight:1000
+}   
 
-body, html { 
-    font-size: 100%; 	
-    padding: 0; 
-    margin: 0; 
-    background: #94C9E9;
+.caprincho {
+    width: 70px;
+    float: inherit;
+    position: absolute;
+    top: 10px;
+    left: -10px ;
+}
+body {
+	background-image: url("https://www.wowpatterns.com/assets/files/resource_images/cotton-flowers-pattern.jpg");	
+	background-color: rgb(77, 224, 101);
+	text-align: center;
+	padding-top: 0pc;
 }
 
 h1{
