--- a/template/Usuario/login.html
+++ b/template/Usuario/login.html
@@ -5,26 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Usuario</title>
+    <title>Chaqueñometro</title>
     <!-- Customize CSS Stylesheet-->
     <link rel="stylesheet" href="{% static 'css/styleLogin.css' %}">
+    <link rel="icon" href="{% static 'css/Carpi2.png' %}">
 </head>
 <body>
-    <form method="POST">
+    <header>
+      <nav class="menu">
+          <a href="#" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
+          <a href="#" class="">Ranking</a>
+          <a href="#" class="">Nosotros</a>
+          <a href="#" class="">Logout</a>
+          <a href="{% url 'login' %}" class="">Login</a>
+      </nav>
+    </header>  
+    <div class="grid_container">
+      <form method="POST">
         {% csrf_token %}
         <div class="login-page">
-            <h1>Inicio de Sesión</h1>
-            <div class="form">
-              <form class="login-form">
-                {{form.as_p}}
-                <button type="submit/static">
-                    Enviar
-                </button>
-              </form>
-            </div>
+          <h1>Inicio de Sesión</h1>
+          <div class="form">
+            <form class="login-form">
+              {{form.as_p}}
+              <button type="submit/static">
+                  Enviar
+              </button>
+            </form>
           </div>
-          <!-- <img src="{% static 'css/GIF - Bandera sin capa negra.gif' %}"/> -->
-    </form>
+        </div>
+      </form>
+    </div>
 </body>
 </html>
 
