--- a/template/inicio.html
+++ b/template/inicio.html
@@ -8,12 +8,12 @@
     <title>Chaqueñometro</title>
     <link rel="stylesheet" href="{% static 'css/styleInicio.css' %}">
     <link rel="icon" href="{% static 'css/Carpi2.png' %}">
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}"></head>
+</head>
 <body>
     <header>
         <nav class="menu">
             <a href="#" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
-            <a href="#" class="">Ranking</a>
+            <a href="/tablero/" class="">Ranking</a>
             <a href="#" class="">Nosotros</a>
             <a href="#" class="">Logout</a>
             <a href="{% url 'login' %}" class="">Login</a>
