--- a/static/css/styleJugar.css
+++ b/static/css/styleJugar.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 *{
 	margin:0;
-  margin-top:0;
+    margin-top:0;
 }
 .menu{  
     background-color: #906c54;
@@ -20,7 +20,7 @@
     box-sizing: border-box;
     font-weight:1000;
 }  
-.menu a:hover{
+.direcciones:hover{
     background-color:#fffeff;
     color: #906c54;
 	cursor: pointer;
@@ -33,6 +33,15 @@
     position: relative;
     left: 15px;
     font-weight:1000
+}   
+.menu a.user{
+    float: left;
+    color: #fffeff;
+    padding: 20px 50px;
+    position: relative;
+    left: 15px;
+    font-weight:1000;
+    margin:0 10px
 }   
 
 .caprincho {
