--- a/static/css/styleReglas.css
+++ b/static/css/styleReglas.css
@@ -19,7 +19,7 @@
     box-sizing: border-box;
     font-weight:1000;
 }  
-.menu a:hover{
+.direcciones:hover{
     background-color:#fffeff;
     color: #906c54;
 	cursor: pointer;
@@ -32,6 +32,15 @@
     position: relative;
     left: 15px;
     font-weight:1000
+}   
+.menu a.user{
+    float: left;
+    color: #fffeff;
+    padding: 20px 50px;
+    position: relative;
+    left: 15px;
+    font-weight:1000;
+    margin:0 10px
 }   
 
 .caprincho {
