--- a/static/css/styleTablero.css
+++ b/static/css/styleTablero.css
@@ -19,7 +19,7 @@
     box-sizing: border-box;
     font-weight:1000;
 }  
-.menu a:hover{
+.direcciones:hover{
     background-color:#fffeff;
     color: #906c54;
 	cursor: pointer;
@@ -33,12 +33,21 @@
     left: 15px;
     font-weight:1000
 }   
+.menu a.user{
+    float: left;
+    color: #fffeff;
+    padding: 20px 50px;
+    position: relative;
+    left: 15px;
+    font-weight:1000;
+    margin:0 10px
+}   
 
 .caprincho {
     width: 70px;
     float: inherit;
     position: absolute;
-    top: 0px;
+    top: 10px;
     left: -10px ;
 }
 body {
@@ -47,6 +56,7 @@ body {
 	text-align: center;
 	padding-top: 0pc;
 }
+
 
 .h1{
 	padding: 2%;
@@ -64,7 +74,7 @@ body {
 	background-color: #1DB062;
 }
 
-img{
+#main-container img{
 	padding-left: 93%;
 	padding-top: 0%;
 }
