--- a/static/css/styleJugar.css
+++ b/static/css/styleJugar.css
@@ -61,15 +61,13 @@ body {
 
 /* Caja del centro */
 #wrapper {
-  width: 50%;
-  height: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #94C9E9;
-  padding: 5%;
-  box-shadow: 1px 1px 7px -1px rgba(0, 0, 0, 0.59);
+	display:block ;
+	margin: 50px auto;
+	width: 50%;
+	height: auto;
+	background-color: #ffffff;
+	padding: 5%;
+	box-shadow: 1px 1px 7px -1px rgba(0, 0, 0, 0.59);
 }
 
 /* Titulo */
@@ -82,24 +80,51 @@ h1 {
   margin-bottom: 5%;
 }
 
-/* Color de fondo del boton*/
-#btn, #start {
-  background-color: #FDC049;
-  color: #000;
-  padding: 15px;
-  border: none;
-  cursor: pointer;
-  width: 40%;
-  display: block;
-  margin: 0 auto;
-  outline: none;
-  font-family: 'Staatliches', cursive;
-  letter-spacing: 4px;
-  font-size: 1em; 
-  transition: 0.3s;
+.form {
+	background: #906c54;
+	padding: 10px;
+	text-align: center;
+	margin-top: 10px; 
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* Efecto sobre el botón */
-#btn:hover, #start:hover {
-  background-color: #DB8E45;
+.quiz-container h3{
+	font-family: "Roboto", sans-serif;
+	outline: 0;
+	background: #f2f2f2;
+	width: -webkit-fill-available;;
+	border: 0;
+    margin: 1em;
+	padding: 15px;
+	font-size: 14px;
+}
+
+.quiz-container h3:hover{
+	background-color:#c4b399;
+	color:#f2f2f2;
+}
+
+.form-check-input:active{
+    background-color:#c4b399;
+	color:#f2f2f2;
+}
+.quiz-container button {
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	outline: 0;
+	background: #c4b399;
+	width: -webkit-fill-available;
+	border: 0;
+	padding: 15px;
+	color: #f2f2f2;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+	display:block;
+	margin:auto 10px 10px;
+}
+.quiz-container button:hover{
+	background: #fffffd;
+	color:#906c54
 }
