--- a/template/play/niveles.html
+++ b/template/play/niveles.html
@@ -21,7 +21,8 @@
         </nav>
     </header>
     <div class="main">
-        <section>
+        <img src= "{% static 'css/Carpi1.jpg' %}" width="200" height="200"/>
+        <section class="grid_container">
             <h2>Menú Principal</h2>
             <a href="{% url 'reglasJuego' %}">
                 <button class="btn-success">
@@ -45,7 +46,6 @@
             </a>
             <!-- <button href="#">Nivel Fácil</button> -->
         </section>
-        <img src= "{% static 'css/Carpi1.jpg' %}" width="200" height="200"/>
     </div>
 </body>
 </html>
