--- a/template/play/reglasJuego.html
+++ b/template/play/reglasJuego.html
@@ -20,29 +20,33 @@
       <a href="{% url 'login' %}" class="direcciones">Login</a>
   </nav>
   </header>  
-    <header>
+    <div class="fondo_reglas">
+      <header class="regla">
         <h1>Reglas del Juego!</h1>
       </header>
-      <section id="col1">
-        <h1>CHAQUEÑOMETRO</h1>
-        <img src="{% static 'css/Carpi1.jpg' %}" width="200" height="200"/>
-        <h2>Demostrá cuánto conocés de tu provincia jugando!!!</h2>
-      </section>
-      <section id="col2">
-        <h1>Objetivo del juego</h1>
-        <p>Responder correctamente el máximo número de preguntas acerca de la provincia del Chaco en 
-          el contexto del aniversario número 70 de su provincialización.</p>
-        <h1>¿Cómo Jugar?</h1>
-        <ol class="bullets">
-          <li>Una vez iniciada tu sesión podrás elegir el nivel de dificultad del juego.</li>
-          <li>Cada nivel consta de 10 preguntas de distintas categorías: Historia, Geografía, Educación, Economía, Cultura y Deporte.</li>
-          <li>Cada respuesta correcta del nivel fácil te sumará 3 puntos.</li>
-          <li>Cada respuesta correcta del nivel medio te sumará 5 puntos.</li>
-          <li>Cada respuesta correcta del nivel difícil te sumará 8 puntos.</li>
-          <li>Una vez finalizada la partida podrás acceder al ranking y ver en qué posición quedaste.</li>
-        </ol>
-        <h1>Acerca del Proyecto</h1>
-        <p>Este juego fue desarrollado por el grupo nro 5 como parte del programa del Gobierno del Chaco, llamado Informatorio.</p>
-      </section>
+      <div class="grid_container">
+        <section id="col1">
+          <h1>CHAQUEÑOMETRO</h1>
+          <img src="{% static 'css/Carpi1.jpg' %}" width="200" height="200"/>
+          <h2>Demostrá cuánto conocés de tu provincia jugando!!!</h2>
+        </section>
+        <section id="col2">
+          <h1>Objetivo del juego</h1>
+          <p>Responder correctamente el máximo número de preguntas acerca de la provincia del Chaco en 
+            el contexto del aniversario número 70 de su provincialización.</p>
+          <h1>¿Cómo Jugar?</h1>
+          <ol class="bullets">
+            <li>Una vez iniciada tu sesión podrás elegir el nivel de dificultad del juego.</li>
+            <li>Cada nivel consta de 10 preguntas de distintas categorías: Historia, Geografía, Educación, Economía, Cultura y Deporte.</li>
+            <li>Cada respuesta correcta del nivel fácil te sumará 3 puntos.</li>
+            <li>Cada respuesta correcta del nivel medio te sumará 5 puntos.</li>
+            <li>Cada respuesta correcta del nivel difícil te sumará 8 puntos.</li>
+            <li>Una vez finalizada la partida podrás acceder al ranking y ver en qué posición quedaste.</li>
+          </ol>
+          <h1>Acerca del Proyecto</h1>
+          <p>Este juego fue desarrollado por el grupo nro 5 como parte del programa del Gobierno del Chaco, llamado Informatorio.</p>
+        </section>
+      </div>
+    </div>
 </body>
 </html>
