--- a/static/css/styleNiveles.css
+++ b/static/css/styleNiveles.css
@@ -58,10 +58,23 @@ body {
 	padding-top: 0pc;
 }
 
+.main{
+	display:grid;
+	max-width: 50%;
+	margin:auto;
+	border-radius: 9%;
+	border: #767676 solid 2px;
+	background-color: #fffeff;
+	grid-template-rows: 1fr ;
+	grid-template-columns: 1fr 1fr ;
+	object-fit:contain;
+	margin-top: 2em;
+}
 
 .main img{
 	padding-right: 0%;
 	padding-top: 1%;
+	margin:auto
 }
 
 .main > section h2 {
@@ -77,20 +90,28 @@ body {
 }
 
 .main > section button {
-	border: none;
-	background: #1DB062;
-	color: #000;
-	padding: 1.5em;
-	display: block;
-	width: 100%;
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	background: #c4b399;
+	width: -webkit-fill-available;
+	border: 0;
+	padding: 15px;
+	color: #f2f2f2;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
 	cursor: pointer;
-	margin: 10px 0;
-	font-size: 1rem;
-    font-family: 'Staatliches', cursive;
+	display:block;
+	margin: 10px;
+	text-decoration:none
+}
+a{
+	text-decoration:none
 }
 
 .main > section button:hover {
-	background: #FDC049;
+	background: #fffffd;
+	color:#906c54
 }
 
 .main > section button.active {
