--- a/static/css/styleReglas.css
+++ b/static/css/styleReglas.css
@@ -56,33 +56,51 @@ body {
 	text-align: center;
 	padding-top: 0pc;
 }
-
+.regla{
+  margin:auto;
+	border: #767676 solid 2px;
+	background-color: #fffeff;
+  margin-top: 1em;
+  max-width: 70%;
+}
+.grid_container{
+	display:grid;
+	max-width: 70%;
+	height:fit-content;
+	margin:auto;
+	border-radius: 9%;
+	border: #767676 solid 2px;
+	background-color: #fffeff;
+	grid-template-rows: 1fr ;
+	grid-template-columns: 1fr 3fr ;
+	object-fit:contain;
+	margin-top: 1em;
+}
 h1,h2,ul.bullets {
     color: #00bb2d;
   }
   
 .header,h1,ul.bullets{
   color: white;
-  background-color: white;
+  background-color: transparent;
   font-family: 'Staatliches', cursive;
 }
 
 .col1,h1,ul.bullets{
-  color:#00bb2d;
+  color:#ad6648;
   font-family: 'Staatliches', cursive;
 }
 
 header {
   padding: auto;
   display: block;
-  background-color: white;
+  background-color: transparent;
   height: 50px;
 }
 
 section {
   display: block;
-  border: 30px solid white;
-  margin-bottom: 40px;
+  border: 30px solid transparent;
   text-align: left;
 }
 
@@ -98,11 +116,9 @@ ul.bullets{
 #col1 {
   padding-left: 2px;
   width: 220px;
-  height: 900px;
   font-family: 'Staatliches', cursive;
 }
 #col2 {
-  height: 900px;
   font-family: 'Staatliches', cursive;
 }
 
