brenda: cambio en las fuentes del Front

--- a/template/play/jugar.html
+++ b/template/play/jugar.html
@@ -21,6 +21,11 @@
             Ver Aqui el Tablero
         </button>
     </a>
+    <a href="{% url 'niveles' %}">
+        <button id="start" class="btn-success">
+            Volvé para jugar otro nivel!!
+        </button>
+    </a>
     <!-- compartir-->
     <button id="start" class="btn-success">
     <a title="Compartir en Facebook" id="facebook-share-button-linuxito.com">Compartir en Facebook</a>
