--- a/template/play/reglasJuego.html
+++ b/template/play/reglasJuego.html
@@ -16,6 +16,11 @@
         <h1>CHAQUEÑOMETRO</h1>
         <img src="{% static 'css/Carpi1.jpg' %}" width="200" height="200"/>
         <h2>Demostrá cuánto conocés de tu provincia jugando!!!</h2>
+        <a href="{% url 'niveles' %}">
+          <button id="jugar">
+              Jugar
+          </button>
+        </a>
       </section>
       <section id="col2">
         <h1>Objetivo del juego</h1>
