--- a/static/css/styleLogin.css
+++ b/static/css/styleLogin.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+/* @import url(https://fonts.googleapis.com/css?family=Roboto:300); */
 
 body {
   background: #1DB062;
@@ -11,6 +11,7 @@ background-image: url('css/GIF - Bandera sin capa negra.gif');
 
 h1 {
     display: block;
+    font-family: 'Staatliches', cursive;
     font-size: 2em;
     margin-top: 0.5em;
     margin-bottom: 0.67em;
@@ -25,6 +26,7 @@ h1 {
   margin: auto;
 }
 .form {
+  font-family: 'Staatliches', cursive;
   position: relative;
   z-index: 1;
   background: #FDC049;
@@ -35,7 +37,7 @@ h1 {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 form input {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Staatliches', cursive;
   outline: 0;
   background: #f2f2f2;
   width: 95%;
@@ -46,14 +48,14 @@ form input {
   font-size: 14px;
 }
 form button {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Staatliches', cursive;
   text-transform: uppercase;
   outline: 0;
   background: #4CAF50;
   width: 100%;
   border: 0;
   padding: 15px;
-  color: #962e2e;
+  color: #fff;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
@@ -94,5 +96,5 @@ container .info h1 {
   padding: 0;
   font-size: 36px;
   font-weight: 300;
-  color: #1a1a1a;
+  color: #000;
 }
