--- a/template/Usuario/registro.html
+++ b/template/Usuario/registro.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <!-- Customize CSS Stylesheet-->
-    <link rel="stylesheet" href="{% static 'css/stylesRegistro.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleRegistro.css' %}">
 </head>
 <body>
     <form method="POST">
