--- a/static/css/styleTablero.css
+++ b/static/css/styleTablero.css
@@ -1,70 +1,8 @@
-*{
-	margin:0;
-    margin-top:0;
-}
-.menu{  
-    background-color: #906c54;
-    overflow: hidden;  
-    padding: 0px;
-    position: sticky;
-}
-.menu a{
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 20px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    box-sizing: border-box;
-    font-weight:1000;
-}  
-.direcciones:hover{
-    background-color:#fffeff;
-    color: #906c54;
-	cursor: pointer;
-}
-.menu a.active{
-    float: left;
-    background-color: #fffeff;
-    color: #ad6648;
-    padding: 20px 50px;
-    position: relative;
-    left: 15px;
-    font-weight:1000
-}   
-.menu a.user{
-    float: left;
-    color: #fffeff;
-    padding: 20px 50px;
-    position: relative;
-    left: 15px;
-    font-weight:1000;
-    margin:0 10px
-}   
-
-.caprincho {
-    width: 70px;
-    float: inherit;
-    position: absolute;
-    top: 10px;
-    left: -10px ;
-}
-body {
-	background-image: url("https://www.wowpatterns.com/assets/files/resource_images/cotton-flowers-pattern.jpg");	
-	background-color: rgb(77, 224, 101);
-	text-align: center;
-	padding-top: 0px;
-}
-
-
-h1{
-	margin: 0.5em auto;
-	border: #767676 solid 2px;
-	background-color: #fffeff;
-    max-width: 50%;
+.h1{
+	padding: 2%;
 	text-align: center;
 	font-family: 'Staatliches', cursive;
+	color: #000;
 }
 
 .span.info {
@@ -72,7 +10,11 @@ h1{
 	color: #000;
 }
 
-#main-container img{
+body {
+	background-color: #1DB062;
+}
+
+img{
 	padding-left: 93%;
 	padding-top: 0%;
 }
@@ -95,7 +37,7 @@ th, td {
 }
 
 thead {
-	background-color: #df9b62;
+	background-color: #FDC049;
 	border-bottom: solid 5px #000;
 	color: #000;
 	font-family: 'Staatliches', cursive;
