--- a/static/css/stylesRegistro.css
+++ b/static/css/stylesRegistro.css
@@ -1,128 +1,69 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
-*{
-	margin:0;
-    margin-top:0;
-}
-.menu{  
-    background-color: #906c54;
-    overflow: hidden;  
-    padding: 0px;
-    position: sticky;
-}
-.menu a{
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 20px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    box-sizing: border-box;
-    font-weight:1000;
-}  
-.menu a:hover{
-    background-color:#fffeff;
-    color: #906c54;
-	cursor: pointer;
-}
-.menu a.active{
-    float: left;
-    background-color: #fffeff;
-    color: #ad6648;
-    padding: 20px 50px;
-    position: relative;
-    left: 15px;
-    font-weight:1000
-}   
 
-.caprincho {
-    width: 70px;
-    float: inherit;
-    position: absolute;
-    top: 10px;
-    left: -10px ;
-}
 body {
-	background-image: url("https://www.wowpatterns.com/assets/files/resource_images/cotton-flowers-pattern.jpg");	
-	background-color: rgb(77, 224, 101);
-	text-align: center;
-	padding-top: 0pc;
+  background: #94C9E9;
 }
-.grid_container{
-	display:grid;
-	max-width: 50%;
-	height:90%;
-	margin:auto;
-	border-radius: 9%;
-	border: #767676 solid 2px;
-	background-color: #fffeff;
-	grid-template-rows: 1fr ;
-	grid-template-columns: 1fr ;
-	object-fit:contain;
-	margin-top: 2em;
+
+h1 {
+    display: block;
+    font-size: 25px;
+    margin-top: 0.90em;
+    margin-bottom: 0.20em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
 }
+
 /* Propiedades con respecto al Tamaño formulario de Registro*/
 .login-page {
-  width: auto;
-  padding: 1% 0 0 ;
-  margin: auto;
-}
+    width: 400px;
+    padding: 15;
+    margin: auto;
+  }
 
 /* Propiedades del formulario.*/
 /*padding en % para cambiar el tamaño a todos los lados*/
 .form {
-	background: #906c54;
-	max-width: 500px;
-	margin: 10px auto 100px;
-	padding: 10px 2px 2px 2px;
-	text-align: center;
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
-h1 {
-  display: block;
-  font-size: 2.4em;
-  margin: 25px auto;
-  font-weight: bold;
+  position: relative;
+  background: #DB8E45;
+  margin: 30px auto 20px;
+  padding: 3%;
   text-align: center;
-}
-label{
-	font-size: 1.3em;
-}
-/*Propiedades caja de texto dentro del formulario. Campos del formulario*/
-form input {
-	font-family: "Roboto", sans-serif;
-	outline: 0;
-	background: #f2f2f2;
-	width: 95%;
-	border: 0;
-	margin: 5px 0 5px;
-	padding: 15px;
-	box-sizing: border-box;
-	font-size: 14px;
-}
-form input:focus{
-	background-color:#c4b399
-}
-/* Propiedades del Botón*/
-form button {
-	font-family: "Roboto", sans-serif;
-	text-transform: uppercase;
-	outline: 0;
-	background: #c4b399;
-	width: -webkit-fill-available;
-	border: 0;
-	padding: 15px;
-	color: #f2f2f2;
-	font-size: 14px;
-	-webkit-transition: all 0.3 ease;
-	transition: all 0.3 ease;
-	cursor: pointer;
-	display:block;
-	margin:auto 10px 10px;
+  width: 400px;
+  height: 400px;
 }
 
-button:hover,.form button:active,.form button:focus {
-	background: #fffffd;
-	color:#906c54
-}
+
+/*Propiedades caja de texto dentro del formulario. Campos del formulario*/
+input {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 90%;
+    border-radius: 10;
+    margin: 0 0 5px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 15px;
+  }
+
+/* Propiedades del Botón*/
+button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #accfae;
+    width: 20%;
+    border: 0;
+    padding: 3px;
+    border: solid #000;
+    color: #000;
+    font-size: 16px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+  }
+
+  button:hover,.form button:active,.form button:focus {
+    background: #1DB062;
+  }
