--- a/template/play/medio.html
+++ b/template/play/medio.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaqueñometro</title>
+    <title>Juego</title>
     <!-- <link rel="stylesheet" href="{% static 'css/styleJugar.css' %}"> -->
-    <link rel="icon" href="{% static 'css/Carpi2.png' %}">
 </head>
 <body>
     
