--- a/static/css/stylesRegistro.css
+++ b/static/css/stylesRegistro.css
@@ -23,7 +23,7 @@
 .menu a:hover{
     background-color:#fffeff;
     color: #906c54;
-	  cursor: pointer;
+	cursor: pointer;
 }
 .menu a.active{
     float: left;
@@ -51,7 +51,7 @@ body {
 .grid_container{
 	display:grid;
 	max-width: 50%;
-	height: 350px;
+	height:90%;
 	margin:auto;
 	border-radius: 9%;
 	border: #767676 solid 2px;
@@ -61,67 +61,42 @@ body {
 	object-fit:contain;
 	margin-top: 2em;
 }
-h1 {
-    display: block;
-    font-family: 'Staatliches', cursive;
-    font-size: 2em;
-    margin:25px auto;
-    font-weight: bold;
-}
+/* Propiedades con respecto al Tamaño formulario de Registro*/
 .login-page {
-	width: auto;
-	padding: 1% 0 0;
-	margin: auto;
+  width: auto;
+  padding: 1% 0 0 ;
+  margin: auto;
 }
+
+/* Propiedades del formulario.*/
+/*padding en % para cambiar el tamaño a todos los lados*/
 .form {
-  font-family: 'Staatliches', cursive;
-  position: relative;
-  z-index: 1;
-  background: #FDC049;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 2px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-form input {
-  font-family: 'Staatliches', cursive;
-  outline: 0;
-  background: #f2f2f2;
-  width: 95%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-form button {
-  font-family: 'Staatliches', cursive;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #fff;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
 	background: #906c54;
 	max-width: 500px;
-	margin: 0 auto 100px;
-	padding: 2px;
+	margin: 10px auto 100px;
+	padding: 10px 2px 2px 2px;
 	text-align: center;
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
+h1 {
+  display: block;
+  font-size: 2.4em;
+  margin: 25px auto;
+  font-weight: bold;
+  text-align: center;
+}
+label{
+	font-size: 1.3em;
+}
+/*Propiedades caja de texto dentro del formulario. Campos del formulario*/
 form input {
 	font-family: "Roboto", sans-serif;
 	outline: 0;
 	background: #f2f2f2;
 	width: 95%;
 	border: 0;
-	margin: 0 0 15px;
+	margin: 5px 0 5px;
 	padding: 15px;
 	box-sizing: border-box;
 	font-size: 14px;
@@ -129,6 +104,7 @@ form input {
 form input:focus{
 	background-color:#c4b399
 }
+/* Propiedades del Botón*/
 form button {
 	font-family: "Roboto", sans-serif;
 	text-transform: uppercase;
@@ -145,50 +121,8 @@ form button {
 	display:block;
 	margin:auto 10px 10px;
 }
-form button:hover,.form button:active,.form button:focus {
+
+button:hover,.form button:active,.form button:focus {
 	background: #fffffd;
 	color:#906c54
-}
-form .message {
-	margin: 15px 0 0;
-	color: #b3b3b3;
-	font-size: 12px;
-}
-form .message a {
-	color: #4CAF50;
-	text-decoration: none;
-}
-form .register-form {
-  display: none;
-}
-container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
-}
-container:before, .container:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-container .info {
-  margin: 50px auto;
-  text-align: center;
-}
-container .info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 36px;
-  font-weight: 300;
-  color: #000;
-  display: none;
-}
-ul {
-  list-style-type: none;
-}
-.errorlist{
-padding: 5px;
-margin: 0.5em 0.8em ;
-background-color:#c4b399;
 }
