--- a/template/play/resultados.html
+++ b/template/play/resultados.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultado</title>
+    <title>Chaqueñometro</title>
     <link rel="stylesheet" href="{% static 'css/styleJugar.css' %}">
+    <link rel="icon" href="{% static 'css/Carpi2.png' %}">
 </head>
 <body>
+    <header>
+        <nav class="menu">
+            <a href="#" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
+            <a href="#" class="user">Hola {{user}} !!!</a>
+            <a href="#" class="direcciones">Ranking</a>
+            <a href="#" class="direcciones">Nosotros</a>
+            <a href="#" class="direcciones">Logout</a>
+            <a href="{% url 'login' %}" class="direcciones">Login</a>
+        </nav>
+      </header>  
 {% block contenido %}
 <div id="wrapper">
     <h1>
