--- a/template/play/resultados.html
+++ b/template/play/resultados.html
@@ -12,12 +12,11 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="#" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
+            <a href="/inicio/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
             <a href="#" class="user">Hola {{user}} !!!</a>
-            <a href="#" class="direcciones">Ranking</a>
-            <a href="#" class="direcciones">Nosotros</a>
-            <a href="#" class="direcciones">Logout</a>
-            <a href="{% url 'login' %}" class="direcciones">Login</a>
+            <a href="/tablero/" class="">Ranking</a>
+            <a href="#" class="">Logout</a>
+            <a href="{% url 'login' %}" class="">Login</a>
         </nav>
       </header>  
 {% block contenido %}
