--- a/template/Usuario/login.html
+++ b/template/Usuario/login.html
@@ -13,11 +13,11 @@
 <body>
     <header>
       <nav class="menu">
-          <a href="#" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
-          <a href="#" class="">Ranking</a>
-          <a href="#" class="">Nosotros</a>
-          <a href="#" class="">Logout</a>
-          <a href="{% url 'login' %}" class="">Login</a>
+        <a href="/inicio/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
+        <a href="/tablero/" class="">Ranking</a>
+        <a href="#" class="">Logout</a>
+        <a href="{% url 'login' %}" class="">Login</a>
+
       </nav>
     </header>  
     <div class="grid_container">
