--- a/template/inicio.html
+++ b/template/inicio.html
@@ -12,9 +12,8 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="#" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
+            <a href="/inicio/" class="active"> <img src="{% static 'css/Carpi2.png' %}" class="caprincho"/>Inicio</a>
             <a href="/tablero/" class="">Ranking</a>
-            <a href="#" class="">Nosotros</a>
             <a href="#" class="">Logout</a>
             <a href="{% url 'login' %}" class="">Login</a>
         </nav>
